green_blue_test/blue-green-demo-route.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green-demo # The name of our route; appears in the URL to access the app
  namespace: default # The namespace we're working in; also appears in the URL to access the app
spec:
  traffic:
  - revisionName: helloworld-python-00000
    percent: 100 # All traffic goes to this revision
#  - revisionName: helloworld-python-00001
#      percent: 0 # 0% of traffic routed to the second revision
#      name: v2 # A named route
